# jpico

./: .gitignore  CMakeLists.txt  README.md
config/: lwipopts.h
core/: CMakeLists.txt
core/include/jpico/: color.hpp  concepts.hpp  core.hpp  log.hpp  platform.hpp  result.hpp  types.hpp
drivers/: CMakeLists.txt
drivers/ili9341/: CMakeLists.txt
drivers/ili9341/include/jpico/drivers/: ili9341.hpp
drivers/ili9341/src/: ili9341.cpp
drivers/ssd1306/: CMakeLists.txt
drivers/ssd1306/include/jpico/drivers/: ssd1306.hpp
drivers/ssd1306/src/: ssd1306.cpp
drivers/xpt2046/: CMakeLists.txt
drivers/xpt2046/include/jpico/drivers/: xpt2046.hpp
drivers/xpt2046/src/: xpt2046.cpp
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt  main.cpp
examples/display_hello/: CMakeLists.txt  main.cpp
examples/oled_hello/: CMakeLists.txt  main.cpp
examples/touch_paint/: CMakeLists.txt  main.cpp
examples/wifi_connect/: CMakeLists.txt  main.cpp
graphics/: CMakeLists.txt
graphics/include/jpico/graphics/: canvas.hpp  font.hpp
hal/: CMakeLists.txt
hal/include/jpico/hal/: board_led.hpp  dma.hpp  gpio.hpp  hal.hpp  i2c_bus.hpp  spi_bus.hpp  time.hpp
include/: config.hpp
include/drivers/: ili9341.hpp
include/graphics/: canvas.hpp  font.hpp
include/network/: wifi.hpp
lib/: gfx.c  gfx.h  gfxfont.h  ili9341.c  ili9341.h
network/: CMakeLists.txt
network/include/jpico/network/: wifi.hpp
network/src/: wifi.cpp
src/: main.cpp
src/drivers/: ili9341.cpp
src/graphics/: canvas.cpp
src/network/: wifi.cpp
